Login page - frontend and backend both are working properly